@@ -1,3 +1,10 @@
+2008-02-08  Alan Watson <Alan.Watson@cern.ch>
+        * Change jobOptions to load simulation algorithms from 
+          TrigT1CaloSim rather than TrigT1Calo
+        * Will work with TrigT1Calo-03-xx-xx only. Branching will
+          be needed for further 13.0.x development
+        * Tag as TrigT1CaloMonitoring-00-02-00 
+
 2008-02-01  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
         * tag TrigT1CaloMonitoring-00-01-21
         * add colz option to 2D plots in CPM monitoring
